Update Delete method response and CURL testing in Terminal, Part 3 complete